updated meta info

--- a/rocketbnb-app/src/app.html
+++ b/rocketbnb-app/src/app.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>rocketbnb accomodation</title>
+    <meta
+      name="description"
+      content="This is a accomodation booking website, where travellers can book accomodation and owners can post their places for renting accomodation ."
+    />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover" class="bg-white">
